Added the requests for the question 3

--- a/code/main.ipynb
+++ b/code/main.ipynb
@@ -512,7 +512,33 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3. DEFINE A NEW SCORE!"
+    "## 3. DEFINE A NEW SCORE!\n",
+    "\n",
+    "Now it's your turn. Build a new metric to rank animes based on the queries of their users.\n",
+    "\n",
+    "In this scenario, a single user can give in input more information than the single textual query, so you need to take into account all this information, and think a creative and logical way on how to answer at user's requests.\n",
+    "\n",
+    "#### Practically:\n",
+    "\n",
+    "The user will enter you a text query. As a starting point, get the query-related documents by exploiting the search engine of Step 2.1.<br>\n",
+    "<newline>\n",
+    "\n",
+    "Once you have the documents, you need to sort them according to your new score. In this step you won't have anymore to take into account just the plot of the documents, you must use the remaining variables in your dataset (or new possible variables that you can create from the existing ones...). You must use a heap data structure (you can use Python libraries) for maintaining the top-k documents.<br>\n",
+    "<newline>\n",
+    "\n",
+    "**Q: How to sort them?** <br>\n",
+    "**A: Allow the user to specify more information** that you find in the documents, and define a new metric that ranks the results based on the new request. You can also use other information regarding the anime to score some animes above others.<br>\n",
+    "N.B.: You have to define a scoring function, not a filter!\n",
+    "\n",
+    "The output, must contain:\n",
+    "\n",
+    "* **animeTitle**\n",
+    "* **animeDescription**\n",
+    "* **Url**\n",
+    "* **The new similarity score of the documents** with respect to the query\n",
+    "\n",
+    "\n",
+    "Are the results you obtain better than with the previous scoring function. Explain and compare results"
    ]
   },
   {
@@ -543,7 +569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -559,7 +585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -568,7 +594,7 @@
        "64"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -580,7 +606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -598,7 +624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -607,7 +633,7 @@
        "[50, 90, 35, 25]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -624,7 +650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
