--- a/code/main.ipynb
+++ b/code/main.ipynb
@@ -687,6 +687,62 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "step=[50, 65, 90, 35, 15, 25, 35]\n",
+    "original=[50, 65, 90, 35, 15, 25, 35]\n",
+    "\n",
+    "def algoritmo_leo(array):\n",
+    "    a=0\n",
+    "    b=array[0]\n",
+    "    step=[array[0]]\n",
+    "    for elem in array[1:]:\n",
+    "        n=max(a+elem,b)\n",
+    "        if a+elem>b:\n",
+    "            step.append(elem)\n",
+    "        print(elem,'massimo fra',a+elem,b,': n=',n,'a=',a,'b=',b)\n",
+    "        a=b\n",
+    "        b=n\n",
+    "    return b,step\n",
+    "\n",
+    "def filtra_ris(step,original):\n",
+    "    step.reverse()\n",
+    "    #print(step)\n",
+    "    print('step',step)\n",
+    "\n",
+    "\n",
+    "    ultimo=step[-1]\n",
+    "    i=0\n",
+    "    condizione=len(step)\n",
+    "    while i<condizione:\n",
+    "        print('while number',i,'step',step)\n",
+    "        j=0\n",
+    "        while (step[i]!=original[j]):\n",
+    "            j+=1\n",
+    "        if (step[i]==original[j]):\n",
+    "            if (step[i+1]==original[j-1] and step[i]!=ultimo):\n",
+    "                step.remove(step[i+1])\n",
+    "                print(step)\n",
+    "            elif(step[i]==ultimo and step[i-1]==original[j+1] ):\n",
+    "                step.remove(step[i-1])\n",
+    "            \n",
+    "\n",
+    "        condizione=len(step)\n",
+    "        print('step',step)\n",
+    "        i+=1\n",
+    "    step.reverse() \n",
+    "    return step\n",
+    "\n",
+    "\n",
+    "def solution(array):\n",
+    "    b,step=algoritmo_leo(array)\n",
+    "    risultato=filtra_ris(step,array)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -712,7 +768,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.8.12"
   },
   "orig_nbformat": 4
  },
