added the idea for the exercise 3

--- a/code/main.ipynb
+++ b/code/main.ipynb
@@ -755,8 +755,31 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "## Solution\n",
+    "\n",
+    "The basic idea is that a user can search for the words in the synopsis in the 2.1 point, so here we want to give the possibility to the user to query the data in the points he preferes from:\n",
+    "* title\n",
+    "* staff\n",
+    "* characters\n",
+    "* voices\n",
+    "* synopsis\n",
+    "\n",
+    "Given that the query shoudld be in the form:<br>\n",
+    "\"```word1 word2 [where_to_search] word3 word4 [where_t_s2] ...```\"<br>\n",
+    "and the program will return the documents that contains word1 AND word2 in the field 'where_to_search' AND contains word3 AND word4 in the field 'where_t_s2'\n",
+    "<newline>\n",
+    "\n",
+    "Hence the idea is to create an inverted index for each of thie fields and then parse the query and obtain the document that match it.<br>\n",
+    "We need to sort this document accordingly with a customized score and return for each of them the neccessarly info"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -765,7 +788,7 @@
        "{'synopsis': '../data/indexes/synopsis'}"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
